# eth-rlp-verify

./: Cargo.toml  changes.diff
.github/workflows/: main.yml
crates/eth-rlp-types/: Cargo.toml
crates/eth-rlp-types/src/: lib.rs
crates/eth-rlp-verify/: Cargo.toml
crates/eth-rlp-verify/src/: constants.rs  lib.rs  test_helpers.rs
crates/eth-rlp-verify/src/eras/: dencun.rs  genesis.rs  london.rs  mod.rs  paris.rs  pectra.rs  shapella.rs
eth-rlp-examples/: Cargo.toml
eth-rlp-examples/examples/: cancun.rs  cancun_sepolia.rs  london.rs  paris.rs  pectra_sepolia.rs  shapella.rs
