[package]
name = "eth-rlp-types"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "eth_rlp_types"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ethereum-types = "0.15"
eyre = "0.6"
# sha3 = "0.10"
hex = "0.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
